--- a/src/styles/message.css
+++ b/src/styles/message.css
@@ -1,20 +1,16 @@
 .message pre {
-  font-size: 0.8rem;
-  padding: 0.4rem 1rem;
-}
-
-pre code.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 1em;
-}
-
-.dark .message pre .lang {
-  opacity: 0.5;
-}
-
-.message .hljs {
-  background-color: transparent;
+  width: 100%;
+  max-width: 100%;
+  font-size: 14px;
+  padding-right: 2.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top-right-radius: var(--rounded-box, 1rem);
+  border-top-left-radius: var(--rounded-box, 1rem);
+  border-bottom-right-radius: var(--rounded-box, 1rem);
+  border-bottom-left-radius: var(--rounded-box, 1rem);
+  margin: 0;
+  min-height: 6rem;
 }
 
 .message table {
